# template-python-vsa

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: BRANCHING_GUIDELINES.md  CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-approve-trigger.yml  auto-merge.yml  auto-version.yml  ci.yml  codeql.yml  docker.yml  preview.yml  release.yml  stale.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  user_story.yml
template_python_vsa/: config.py  main.py
template_python_vsa/feature_greeting/: cli.py  models.py  routes.py  services.py
tests/feature_greeting/: test_cli.py  test_routes.py
